<resources>
    <string name="app_name">AndroidTaskSCheduler</string>
    <string name="button_name">Add New Task</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="date_of_start">Date of start in format: \n 31-12-2023 00:00</string>
    <string name="date_of_end">Date of start in format: \n 31-12-2023 00:00</string>
    <string name="date_of_start_hint">31-12-2023 00:00</string>
    <string name="date_of_end_hint">31-12-2023 00:00</string>
</resources>